sostotuito expert a user, e agginto eempi dei 10 modelli

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,7 +4,7 @@
 \section{Conclusions}
 \label{sec:conclusions}
 
-In this paper, we address the problem of inserting user preferences in the discovery of declarative process models as a two-class supervised task. In particular, we extend the \nd binary miner for the \declare modeling language with preferences over \declare templates and activities appearing in the model (plus a combination of the two). 
-The computation of the preferred models, which take into account the preferences posed by the user, is performed using \asprin, a general framework for computing optimal ASP models with preferences. The provided approach is described by means of motivating examples and an application to the real-life event logs DREYERS and CERV \btext{shows} how to describe - in a discriminative manner - execution traces on the basis of preferred %(e.g., important, ...) 
+In this paper, we address the problem of inserting \chiara{expert} preferences in the discovery of declarative process models as a two-class supervised task. In particular, we extend the \nd binary miner for the \declare modeling language with preferences over \declare templates and activities appearing in the model (plus a combination of the two). 
+The computation of the preferred models, which take into account the preferences posed by the \chiara{expert} user, is performed using \asprin, a general framework for computing optimal ASP models with preferences. The provided approach is described by means of motivating examples and an application to the real-life event logs DREYERS and CERV shows how to describe - in a discriminative manner - execution traces on the basis of preferred %(e.g., important, ...) 
 activities and \declare patterns. Future works will include a wider evaluation, which will also involve end-users. This will enable the assessment of the potential benefits of involving users (through their preferences) in the loop of process discovery.
 
