--- a/introduction.tex
+++ b/introduction.tex
@@ -11,15 +11,15 @@ The first category is constituted by works that tackle the problem of process di
 
 Traditionally, the vast majority of works in the process discovery spectrum have followed the first approach. Nonetheless, few recent works \cite{deviant-tkde,2018-Ponce,DBLP:conf/bpm/SlaatsDB21} have highlighted the importance of addressing this challenge as a two-class supervised task with different motivations: first and foremost the actual existence of \emph{positive} and \emph{negative} examples in real use cases \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}; second, the need to balance \emph{accuracy} and \emph{recall} \cite{DBLP:conf/bpm/SlaatsDB21}; and third, the need to discover a particular process variant according to a domain-specific need (e.g., the process characterizing ``fast'' traces) against the one that characterizes other variants, thus using the labels \emph{positive} and \emph{negative} to distinguish between two classes of examples \cite{deviant-tkde}.  
 
-A problem that remains unsolved in process discovery, in general, and in binary miners, in particular, is the need to select, among all possible discovered models, the ones that fit better the expectations of the user. This is somehow true for the traditional discovery of procedural and declarative models, where the discovered model that accepts all the positive examples is usually too complex (e.g., too spaghetti like), and mechanisms are introduced to ``select'' specific behaviors. Examples of criteria for this selection can be the frequency of a certain element (e.g., an activity or a path), or the presence of certain modeling patterns (e.g., a specific declarative pattern).   
+A problem that remains unsolved in process discovery, in general, and in binary miners, in particular, is the need to select, among all possible discovered models, the ones that fit better the expectations of \chiara{expert users, that is, users who are knowledgeable about the specific domain and because of this have specific desiderata and expectations}. This is somehow true for the traditional discovery of procedural and declarative models, where the discovered model that accepts all the positive examples is usually too complex (e.g., too spaghetti like), and mechanisms are introduced to ``select'' specific behaviors. Examples of criteria for this selection can be the frequency of a certain element (e.g., an activity or a path), or the presence of certain modeling patterns (e.g., a specific declarative pattern).   
 The problem becomes even more compelling when we approach process discovery as a two-class supervised task. In fact, as recently shown in \cite{DBLP:conf/bpm/SlaatsDB21}, perfect binary miners, able to discover models that accept all positive examples and none of the negative examples, do not necessarily exist. In such cases, many sub-optimal models can be returned, leading to the issue of identifying criteria for preferring one model or the other.
  
-In this paper, we address the problem of inserting user preferences in the discovery of declarative process models as a two-class supervised task. We start from a recent work \cite{deviant-tkde} that introduces the \nd binary miner for the \declare modeling language \cite{DBLP:conf/edoc/PesicSA07} (introduced in Section \ref{sec:prel}). Being \nd based on the logic-based framework ASP \cite{asp-intro}, it provides a formal framework with a clear semantics that allows the users to ``prioritize'' the discovery results. In this work, we extend \nd by introducing the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15}, so as to support the notion of user preferences while remaining within the context of a formal, logic-based semantics. The following contributions are provided:
+In this paper, we address the problem of inserting \chiara {expert user} preferences, \chiara{(hereafter expert preferences)} in the discovery of declarative process models as a two-class supervised task. We start from a recent work \cite{deviant-tkde} that introduces the \nd binary miner for the \declare modeling language \cite{DBLP:conf/edoc/PesicSA07} (introduced in Section \ref{sec:prel}). Being \nd based on the logic-based framework ASP \cite{asp-intro}, it provides a formal framework with a clear semantics that allows the users to ``prioritize'' the discovery results. In this work, we extend \nd by introducing the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15}, so as to support the notion of \chiara{expert} preferences while remaining within the context of a formal, logic-based semantics. The following contributions are provided:
 %
 \begin{enumerate}[{(i)}]
-    \item we introduce and motivate two types of user preferences: the first one on the \declare patterns to be used in the discovery task, and the second one on the activities appearing in the output model. Moreover, we discuss also a third type of preference coming from the combination of the first two (Section \ref{sec:example}).
+    \item we introduce and motivate two types of \chiara{expert} preferences: the first one on the \declare patterns to be used in the discovery task, and the second one on the activities appearing in the output model. Moreover, we discuss also a third type of preference coming from the combination of the first two (Section \ref{sec:example}).
 %These new types of preferences are then used to guide the search for a preferred model;	
-	\item we extend the original mechanism of \nd (Section \ref{sec:deviant}), by incorporating the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15} into it. This allows us to integrate within a single framework both the user preferences, as well as the original \nd mechanism based on \emph{model subsumption} (that is treated as a preference as well). In this way, we retain the original ability of obtaining models that vary in generality/specificity, or simplicity.
+	\item we extend the original mechanism of \nd (Section \ref{sec:deviant}), by incorporating the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15} into it. This allows us to integrate within a single framework both the \chiara{expert} preferences, as well as the original \nd mechanism based on \emph{model subsumption} (that is treated as a preference as well). In this way, we retain the original ability of obtaining models that vary in generality/specificity, or simplicity.
 % These preference mechanisms are considered to be domain-independent as they work on general properties of the representation and do not affect the language used to represent the model. In other words, they do not introduce any language bias (or preference) in the representation of the process model (Section \ref{sec:deviant}); 
 	\item we provide some hints about the implementation (Section \ref{sec:tool});   
 	\item we report on exploratory experiments applying an instantiation of \nd  to the data sets used in \cite{2007b-Lamma,DBLP:conf/bpm/SlaatsDB21} (Section \ref{sec:evaluation}).
